--- a/options.yml
+++ b/options.yml
@@ -2,8 +2,7 @@ meta:
   version: 1.0.0
 options:
 - category:
-  - Advanced
-  - Files
+  - Rebalancer
   name: balance_config_file_selector
   header: '{{balance_config_file_selector}}'
   text: '{{balance_config_file_selector_descr}}'
